--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "RFCbootstrap"]
 	path = RFCbootstrap
-	url = git@github.com:mnot/RFCbootstrap.git
+  url = https://github.com/mnot/RFCbootstrap.git
